--- a/views/web-app.pug
+++ b/views/web-app.pug
@@ -28,6 +28,7 @@ html
         script(src="/bower_components/angular-route/angular-route.min.js")
         script(src="/bower_components/angular-bootstrap/ui-bootstrap.js")
         script(src="/bower_components/angular-translate/angular-translate.min.js")
+        <script src="/bower_components/angular-i18n/angular-locale_fr-fr.js"></script>
         script(src="/web-app/app.js")
         script(src="/web-app/routes.js")
         script(src="/web-app/filters/filters.js")
@@ -89,16 +90,16 @@ html
             md-toolbar.md-menu-toolbar(layout="row")
                 md-toolbar-filler(layout layout-align="center center" style="width:250px; background-color: white" hide-xs hide-sm hide-md)
                 md-menu-bar.main-menu
-                    md-button(href="#/monitor/" ng-class="{cur: nav.isActive('classroom')}")
+                    md-button(href="#!/monitor/" ng-class="{cur: nav.isActive('classroom')}")
                         md-icon.material-icons.md-24 school
                         div(translate="layout.classrooms")
-                    md-button(href="#/schedules/" ng-class="{cur: nav.isActive('schedules')}")
+                    md-button(href="#!/schedules/" ng-class="{cur: nav.isActive('schedules')}")
                         md-icon.material-icons.md-24 date_range
                         div(translate="layout.schedules")
-                    md-button(href="#/devices" ng-class="{cur: nav.isActive('devices')}" ng-if="authorizedLevel(2)")
+                    md-button(href="#!/devices" ng-class="{cur: nav.isActive('devices')}" ng-if="authorizedLevel(2)")
                         md-icon.material-icons.md-24 wifi
                         div(translate="layout.devices")
-                    md-button(href="#/settings/" ng-class="{cur: nav.isActive('settings')}" ng-if="authorizedLevel(2)")
+                    md-button(href="#!/settings/" ng-class="{cur: nav.isActive('settings')}" ng-if="authorizedLevel(2)")
                         md-icon.material-icons.md-24 settings
                         div(translate="layout.settings")
         div(id="main")
