--- a/views/login.pug
+++ b/views/login.pug
@@ -19,6 +19,7 @@ html
         script(src="/bower_components/angular-route/angular-route.min.js")
         script(src="/bower_components/angular-messages/angular-messages.js")
         script(src="/bower_components/angular-translate/angular-translate.min.js")
+        <script src="/bower_components/angular-i18n/angular-locale_fr-fr.js"></script>
         script(src="/web-app/ng-sanitize.js")
         script(src="/web-app/login.js")
 
