--- a/views/web-app.pug
+++ b/views/web-app.pug
@@ -28,7 +28,8 @@ html
         script(src="/bower_components/angular-route/angular-route.min.js")
         script(src="/bower_components/angular-bootstrap/ui-bootstrap.js")
         script(src="/bower_components/angular-translate/angular-translate.min.js")
-        <script src="/bower_components/angular-i18n/angular-locale_fr-fr.js"></script>
+        script(src="/bower_components/angular-i18n/angular-locale_fr-fr.js")
+        script(src="/bower_components/moment/moment.js")
         script(src="/web-app/app.js")
         script(src="/web-app/routes.js")
         script(src="/web-app/filters/filters.js")
